--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "QRat",
-  "short_name": "QR App",
+  "short_name": "QRat",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0b1220",
@@ -19,3 +19,4 @@
     }
   ]
 }
+
